--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,9 +6,9 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:latest
 
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
-#RUN apt-get update && apt-get install -yq \
-#    alsa-utils libasound2-dev && \
-#    apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -yq \
+    python-rpi.gpio && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Defines our working directory in container
 WORKDIR /usr/src/app
