--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -7,17 +7,17 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:latest
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
 RUN apt-get update && apt-get install -yq \
-    python-rpi.gpio && \
+    libicu-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Defines our working directory in container
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Copies the package.json first for better cache on later pushes
 COPY package.json package.json
 
 # This will copy all files in our root to the working  directory in the container
-COPY . ./
+COPY . /app
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
