adding python back in

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -7,7 +7,7 @@ FROM resin/%%RESIN_MACHINE_NAME%%-node:latest
 # use apt-get if you need to install dependencies,
 # for instance if you need ALSA sound utils, just uncomment the lines below.
 RUN apt-get update && apt-get install -yq \
-    libicu-dev && \
+    python-dev python-rpi.gpio && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Defines our working directory in container
