added build essential

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,7 +21,7 @@ COPY . /app
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
+RUN JOBS=MAX npm config set python python2.7 && npm install --production --unsafe-perm && npm cache clean && rm -rf /tmp/*
 
 # Enable systemd init system in container
 ENV INITSYSTEM=on
