--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,7 +21,7 @@ COPY . /app
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm cache clean && rm -rf node_modules && npm install --unsafe-perm && rm -rf /tmp/*
+RUN JOBS=MAX npm cache clean && rm -rf node_modules && npm install -g node-gyp && npm install --unsafe-perm && rm -rf /tmp/*
 
 # Enable systemd init system in container
 ENV INITSYSTEM=on
