--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "node-red-node-pushbullet": "^0.0.x"
   },
   "scripts": {
-    "start": "node --max-old-space-size=384 node_modules/node-red/red.js -v --settings ./settings.js"
+    "start": "node --max-old-space-size=384 node_modules/node-red/red.js --settings ./settings.js"
   }
 }
