getting bson compilation error to work

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,7 +21,12 @@ COPY . /app
 
 # This install npm dependencies on the resin.io build server,
 # making sure to clean up the artifacts it creates in order to reduce the image size.
-RUN JOBS=MAX npm cache clean && rm -rf node_modules && npm install -g node-gyp && npm install --unsafe-perm && rm -rf /tmp/*
+RUN git clone https://github.com/mongodb/js-bson.git
+RUN cd js-bson
+RUN npm install -g
+RUN node-gyp rebuild
+RUN cd ..
+RUN npm install --unsafe-perm && rm -rf /tmp/*
 
 # Enable systemd init system in container
 ENV INITSYSTEM=on
