--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ script:
   - ssh-add ./id_rsa
   - cat resinkey >> ~/.ssh/known_hosts
   - git remote add resin $RESIN_REMOTE
-  - git push resin master
+  - git remote add resin-staging $RESIN_REMOTE_STAGING
+  - git push resin-staging master
+  - git push resin production:master
